Fixed Project Card Alignment & Project Card on Admin Page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,9 +93,14 @@ mark {
     flex-wrap: wrap;
     max-width: 100%;
     border-radius: 10px !important;
+    flex-direction: column;
     min-height: 100%;
 }
 
-.bottomCard {
-    align-self: flex-end;
+.cardContent {
+    margin-bottom: 10px;
 }
+.cardBody {
+    flex: auto
+}
+
